assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f0f4f8;
}

.content {
    margin-top: 8dvh;
    padding: 20px;
}

footer {
    width: 100%;
    bottom: 0;
    background-color: rgb(239, 253, 255);
    position: fixed;
    text-align: center;
}


/* ============================ */
/* ========== Navbar ========== */
/* ============================ */

.nav-container {
    background-color: #ffffff;
    top: 0;
    left: 0;
    width: 100%;
    height: fit-content;
    padding: 2dvh;
    position: fixed;
    /* border-bottom: #60c5ff 3px solid; */
    border-bottom: rgb(0, 92, 137) 3px solid;
    box-shadow: 0px 0px 20px 0px rgba(36, 86, 107, 0.29);
}

.nav-brand {
    color: rgb(0, 92, 137);
    font-size: 1.5rem;
    text-decoration: none;
    float: left;
    padding-right: 30px;
    margin-top: -5px;
    margin-bottom: -2px;
}


.nav-links {
    display: flex;
    align-items: center;
}

.nav-links a {
    color: rgb(0, 0, 0);
    font-size: 1.1rem;
    transition: /*font-size 0.2s ease,*/ color 0.2s ease;
    text-decoration: none;
    text-align: center;
    min-width: fit-content;
    padding-left: 15px;
}

.nav-links a:hover {
    /* font-size: 1.02rem; */
    color: #136f8a;
}

.nav-user {
    right: 20px;
    position: fixed;
}

.nav-uname {
    color: rgb(99, 99, 99);
    font-size: 1.1rem;
}

.nav-user.dropdown {
    position: absolute;
    margin-right: 2.5dvw;
    float: right;
}
.nav-user-icon {
    font-size: 1.8rem;
    cursor: pointer;
}
.nav-user-name {
    font-size: 1rem;
    position: relative;
}
.dropdown-content {
    display: none;
    position: absolute;
    border-radius: 15px;
    right: 0;
    background-color: #fff;
    min-width: 120px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    z-index: 1;
}
.dropdown-content a {
    color: #333;
    padding: 10px 16px;
    text-decoration: none;
    display: block;
    border-radius: 15px;
}

.login-container {
    width: 100%;
    display: block;
    text-align: center;
    justify-content: center;
    align-items: center;
}

.admin-panel {
    width: 90%;
    max-width: 1200px;
    height: fit-content;
    display: flex;
    flex-direction: column;
    margin: auto;
}

.admin-analytics {
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.admin-tasks {
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.gbt-dash {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.dropdown-content a:hover {
    background-color: #f1f1f1;
}

.nav-user.dropdown:hover .dropdown-content {
    display: block;
    transition: 0.3s ease;
}

/* ============================ */
/* ======== Login Page ======== */
/* ============================ */

.login-container {
    margin: 0;
    padding: 0;
}

.form-box{
    width: 90%;
    max-width: 450px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    background: #fff;
    padding: 50px 60px 70px;
    text-align: center;
    border-radius: 25px;
}

.form-box h1 {
    font-size: 30px;
    margin-bottom: 60px;
    color: rgb(0, 92, 137);
    position: relative;
}

.form-box h1::after{
    content: '';
    width: 30px;
    height: 4px;
    border-radius: 5px;
    background: rgb(0, 78, 116);
    position: absolute;
    bottom: -12px;
    left: 50%;
    transform: translate(-50%);
}

.input-field{
    background: #eaeaea;
    margin: 15px 0;
    border-radius: 15px;
    display: flex;
    align-items: center;
    max-height: 65px;
    transition: max-height 0.5s;
    overflow: hidden;
}

.icon{
    text-align: center;
}

.icon i {
    color: rgb(111, 150, 169);
    padding-left: 0.8rem;
    padding-right: 2.2rem;
    padding-bottom: 0.8rem;
    padding-top: 0.6rem;
    border-radius: 0.6px;
    font-size: 1.5rem;
    cursor: pointer;
    margin:0.2px 15px;
}

.lost-pass a:hover {
    color: rgb(0, 136, 204);
    transition: 0.5s ease;
}

.icon i:hover{
    color: rgb(0, 81, 121);
    transition: 0.5s ease;
}

#signupBtn:hover{
    background: rgb(1, 135, 201);
    transition: 0.3s ease;
} 

#signinBtn:hover{
    background: rgb(216, 243, 255);
    transition: 0.3s ease;
} 

input{
    width: 100%;
    background: transparent;
    border: 0;
    outline: 0;
    padding: 18px 15px;
}

.input-field i {
    margin-left: 15px;
    color: #999;
}

form p {
    text-align: left;
    font-size: 13px;
}

form p a {
    text-decoration: none;
    color: rgb(0, 92, 137);
}

.btn-field {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.btn-field button {
    flex-basis: 48%;
    background: rgb(0, 92, 137);
    color: #fff;
    height: 40px;
    border-radius: 20px;
    border: 0;
    outline: 0;
    cursor: pointer;
    transition: background 1s;
}

.input-group{
    height: 280px;
}

.btn-field button.disable{
    background: #eaeaea;
    color: #555;
}

